--- a/app/src/main/res/drawable/default_dot.xml
+++ b/app/src/main/res/drawable/default_dot.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thickness="8dp"
-            android:useLevel="false">
-            <solid android:color="@android:color/darker_gray"/>
-        </shape>
-    </item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+    <size
+        android:width="8dp"
+        android:height="8dp"/>
+
+    <solid android:color="@color/athens_gray"/>
+
+</shape>
