--- a/app/src/main/res/drawable/selected_dot.xml
+++ b/app/src/main/res/drawable/selected_dot.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thickness="8dp"
-            android:useLevel="false">
-            <solid android:color="@color/txt_red"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-            <!--            <stroke android:color="@color/black" android:width="1dp"/>-->
-        </shape>
-    </item>
-</layer-list>
+    <size
+        android:width="15dp"
+        android:height="8dp"/>
+
+    <corners android:radius="25dp"/>
+    <solid android:color="@color/red_ribbon"/>
+
+</shape>
