--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
         android:fontFamily="@font/samsung"
-        android:text="Satisfy your cravings \n with ease"
         android:textAlignment="center"
         android:textColor="@color/blue_vogue"
         android:textSize="24sp"
@@ -35,16 +34,15 @@
 
     <TextView
         android:id="@+id/tv_onboarding_body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
+        android:layout_width="3dp"
+        android:layout_height="18dp"
         android:layout_marginTop="7dp"
         android:fontFamily="@font/samsung"
-        android:gravity="center"
-        android:text="Integer a viverra sit feugiat leo\ncommodo nunc."
-        android:textAlignment="gravity"
+        android:textAlignment="center"
+        android:text="Integer a viverra sit feugiat leo\nncommodo nunc."
         android:textColor="@color/lynch"
-        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title" />
 
 
