--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -34,12 +34,11 @@
 
     <TextView
         android:id="@+id/tv_onboarding_body"
-        android:layout_width="3dp"
-        android:layout_height="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:fontFamily="@font/samsung"
         android:textAlignment="center"
-        android:text="Integer a viverra sit feugiat leo\nncommodo nunc."
         android:textColor="@color/lynch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
