--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:layout_height="49dp"
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/samsung"
-            android:text="Skip"
+            android:text="@string/skip"
             android:textColor="#9F9F9F" />
 
         <Button
@@ -64,7 +64,7 @@
             android:layout_marginStart="40dp"
             android:background="@drawable/btn_background"
             android:fontFamily="@font/samsung"
-            android:text="Next"
+            android:text="@string/next"
             android:textColor="@color/white" />
 
     </LinearLayout>
