--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/samsung"
             android:text="@string/skip"
+            android:textAllCaps="false"
             android:textColor="#9F9F9F" />
 
         <Button
@@ -65,7 +66,9 @@
             android:background="@drawable/btn_background"
             android:fontFamily="@font/samsung"
             android:text="@string/next"
-            android:textColor="@color/white" />
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 
