--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,7 +3,7 @@
     <style name="SplashTheme" parent="Theme.SplashScreen">
         <item name="android:windowSplashScreenBackground">@color/white</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/eatsplorer</item>
-        <item name="splashScreenIconSize">400dp</item>
-        <item name="postSplashScreenTheme">@style/Base.Theme.Eatsplorer</item>
+        <item name="android:windowSplashScreenAnimationDuration">3000</item>
+        <item name="postSplashScreenTheme">@style/Theme.Eatsplorer</item>
     </style>
 </resources>
