--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    android:background="@color/white"
     tools:context=".view.RegisterActivity">
 
 
@@ -90,9 +90,9 @@
     <EditText
         android:id="@+id/et_full_name"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginBottom="27dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="245dp"
+        android:layout_marginBottom="193dp"
         android:autofillHints="name"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/check"
@@ -103,10 +103,10 @@
         android:paddingEnd="10dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/tv_email_address"
+        app:layout_constraintBottom_toTopOf="@+id/show_pass_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_full_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -169,6 +169,7 @@
         android:hint="*******"
         android:inputType="textPassword"
         android:paddingStart="20dp"
+        android:paddingEnd="0dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
@@ -180,13 +181,14 @@
         android:id="@+id/show_pass_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="339dp"
         android:alpha=".5"
-        android:contentDescription="password"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/baseline_visibility_24"
-        app:layout_constraintBottom_toBottomOf="@+id/et_pass"
-        app:layout_constraintEnd_toEndOf="@+id/et_pass" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/et_pass"
+        app:layout_constraintTop_toBottomOf="@+id/et_full_name" />
 
     <Button
         android:id="@+id/btn_register"
@@ -221,9 +223,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center"
         app:layout_constraintTop_toTopOf="@+id/tv_by">
 
         <TextView
