map doesn't want to return data

--- a/app/src/main/res/menu/current_place_menu.xml
+++ b/app/src/main/res/menu/current_place_menu.xml
@@ -4,6 +4,10 @@
 
     <item
         android:id="@+id/option_get_place"
-        android:title="@string/option_get_place"
-        app:showAsAction="always" />
+        android:title="@string/option_get_place" />
+
+    <item
+        android:id="@+id/logout"
+        android:title="Log out" />
+
 </menu>
