--- a/app/src/main/res/menu/current_place_menu.xml
+++ b/app/src/main/res/menu/current_place_menu.xml
@@ -8,6 +8,7 @@
 
     <item
         android:id="@+id/logout"
-        android:title="Log out" />
+        android:title="Log out"
+        android:icon="@drawable/baseline_logout_24"/>
 
 </menu>
