--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/lynch" />
+        app:titleTextColor="@color/lynch_light" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
