--- a/app/src/main/res/layout/custom_info_contents.xml
+++ b/app/src/main/res/layout/custom_info_contents.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layoutDirection="locale"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/lynch_light">
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
