--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="txt_black">#0D0D0D</color>
     <color name="et_grey">#DEDEDE</color>
     <color name="lynch_light">#AFCDFB</color>
+    <color name="transparent">#000000</color>
 </resources>
