sucessfully created statusbar color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="et_grey">#DEDEDE</color>
     <color name="lynch_light">#AFCDFB</color>
     <color name="transparent">#000000</color>
+    <color name="athens_gray_dark">#9FE9E9F0</color>
 </resources>
