--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:fitsSystemWindows="true"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     tools:context=".view.RegisterActivity">
@@ -75,11 +75,12 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_account"
         app:layout_constraintStart_toEndOf="@+id/tv_account" />
 
+
     <TextView
         android:id="@+id/tv_full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/samsung"
         android:text="Full name"
         android:textColor="@color/blue_vogue"
@@ -89,10 +90,9 @@
 
     <EditText
         android:id="@+id/et_full_name"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="245dp"
-        android:layout_marginBottom="193dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
         android:autofillHints="name"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/check"
@@ -103,31 +103,27 @@
         android:paddingEnd="10dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/show_pass_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />
 
     <TextView
         android:id="@+id/tv_email_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="182dp"
-        android:layout_marginBottom="182dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="@font/samsung"
         android:text="Email Address"
         android:textColor="@color/blue_vogue"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_pass"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />
+        app:layout_constraintBottom_toTopOf="@+id/et_email_address"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/et_email_address"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="42dp"
         android:layout_marginBottom="44dp"
         android:autofillHints="emailAddress"
         android:background="@drawable/et_background"
@@ -139,28 +135,26 @@
         android:paddingEnd="10dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_password_txt"
+        app:layout_constraintBottom_toTopOf="@+id/et_pass"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_email_address" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_password_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="393dp"
-        android:layout_marginBottom="393dp"
+        android:layout_marginTop="108dp"
         android:fontFamily="@font/samsung"
         android:text="Password"
         android:textColor="@color/blue_vogue"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_let" />
+        app:layout_constraintTop_toBottomOf="@+id/et_full_name" />
 
     <EditText
         android:id="@+id/et_pass"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="18dp"
         android:layout_marginBottom="26dp"
@@ -174,27 +168,28 @@
         android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_password_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_password_txt"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/show_pass_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="339dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         android:alpha=".5"
         android:contentDescription="@string/app_name"
         android:src="@drawable/baseline_visibility_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/et_pass"
-        app:layout_constraintTop_toBottomOf="@+id/et_full_name" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/et_pass" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="249dp"
+        android:layout_marginBottom="184dp"
         android:background="@drawable/btn_background_red"
         android:fontFamily="@font/samsung"
         android:text="Sign up"
@@ -203,6 +198,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
