--- a/app/src/main/res/drawable/et_background.xml
+++ b/app/src/main/res/drawable/et_background.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="10dp"/>
-    <solid android:color="@color/athens_gray"/>
+    <stroke android:color="@color/athens_gray_dark" android:width="2dp"/>
 
 </shape>
