--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.Eatsplorer" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/red_ribbon</item>
+        <item name="colorOnPrimary">@color/txt_red</item>
     </style>
 
     <style name="Theme.Eatsplorer" parent="Base.Theme.Eatsplorer">
