--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"/>
 
-    <LinearLayout
+    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
         android:id="@+id/onboarding_indicators"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="214dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:padding="15dp"
-        android:gravity="center"
+        app:dotsCornerRadius="8dp"
+        app:dotsColor="@color/blue_vogue"
+        app:selectedDotColor="@color/red_ribbon"
+        app:dotsSize="15dp"
+        app:dotsSpacing="3dp"
+        app:dotsWidthFactor="2.5"
+        android:paddingStart="100dp"
+        android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal"/>
+        app:progressMode="true"/>
 
 
     <LinearLayout
