--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/constraint_layout"
-    tools:context=".MainActivity">
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="76dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        android:id="@+id/constraint_layout"
+        tools:context=".MainActivity">
 
-    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-        android:id="@+id/onboarding_indicators"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="214dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:dotsCornerRadius="8dp"
-        app:dotsColor="@color/blue_vogue"
-        app:selectedDotColor="@color/red_ribbon"
-        app:dotsSize="15dp"
-        app:dotsSpacing="3dp"
-        app:dotsWidthFactor="2.5"
-        android:paddingStart="100dp"
-        android:paddingEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:progressMode="true"/>
-
-
-    <LinearLayout
-        android:id="@+id/ll_buttons"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/skip_btn"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="140dp"
-            android:layout_height="49dp"
-            android:layout_marginEnd="30dp"
-            android:fontFamily="@font/samsung"
-            android:text="@string/skip"
-            android:textAllCaps="false"
-            android:textColor="#9F9F9F" />
-
-        <Button
-            android:id="@+id/next_btn"
-            android:layout_width="140dp"
-            android:layout_height="49dp"
-            android:layout_marginStart="40dp"
-            android:background="@drawable/btn_background"
-            android:fontFamily="@font/samsung"
-            android:text="@string/next"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            tools:ignore="ButtonStyle" />
-
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
